@@ -7,13 +7,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.jdbc.Sql;
-import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.model.Genre;
-import ru.yandex.practicum.filmorate.model.Mpa;
-import ru.yandex.practicum.filmorate.model.User;
+import ru.yandex.practicum.filmorate.model.*;
 
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -26,11 +22,13 @@ public class FilmServiceTest {
 
     private final FilmService filmService;
     private final UserService userService;
+    private final DirectorService directorService;
     private Film firstFilm;
     private Film secondFilm;
     private Film thirdFilm;
     private User user;
     private User friend;
+    private Director director;
 
     @BeforeEach
     public void init() {
@@ -41,7 +39,7 @@ public class FilmServiceTest {
                 .duration(100)
                 .mpa(new Mpa(1L, "G"))
                 .genres(List.of(new Genre(1L, "testGenre")))
-                .directors(Collections.emptyList())
+                .directors(List.of())
                 .build();
         filmService.create(firstFilm);
 
@@ -52,7 +50,7 @@ public class FilmServiceTest {
                 .duration(100)
                 .mpa(new Mpa(1L, "G"))
                 .genres(List.of(new Genre(1L, "testGenre")))
-                .directors(Collections.emptyList())
+                .directors(List.of())
                 .build();
         filmService.create(secondFilm);
 
@@ -63,7 +61,7 @@ public class FilmServiceTest {
                 .duration(100)
                 .mpa(new Mpa(2L, "PG"))
                 .genres(List.of(new Genre(2L, "testGenre2")))
-                .directors(Collections.emptyList())
+                .directors(List.of())
                 .build();
         filmService.create(thirdFilm);
 
@@ -83,6 +81,10 @@ public class FilmServiceTest {
                 .birthday(LocalDate.of(1987, 3, 1))
                 .build();
         userService.create(friend);
+
+        director = Director.builder()
+                .name("Director name")
+                .build();
     }
 
     @Test
@@ -93,10 +95,20 @@ public class FilmServiceTest {
     @Test
     public void findTopPopularFilms() {
         assertEquals(1, filmService.findFilteredPopularFilms(2, 1L, 2001).size());
-        assertEquals(2, filmService.findFilteredPopularFilms(null, 1L, null).size());
-        assertEquals(2, filmService.findFilteredPopularFilms(null, null, 2001).size());
+        assertEquals(2, filmService.findFilteredPopularFilms(10, 1L, null).size());
+        assertEquals(2, filmService.findFilteredPopularFilms(10, null, 2001).size());
     }
 
+    @Test
+    public void searchFilm() {
+        directorService.create(director);
+        directorService.addAllToFilm(firstFilm.getId(), List.of(director));
+        directorService.addAllToFilm(secondFilm.getId(), List.of(director));
+        directorService.addAllToFilm(thirdFilm.getId(), List.of(director));
+        assertEquals(3, filmService.searchFilms("name", "title").size());
+        assertEquals(3, filmService.searchFilms("dir", "director").size());
+        assertEquals(6, filmService.searchFilms("name", "title,director").size());
+    }
 }
 
 
